# Rust-Game-Engine

./: Cargo.toml  README.md
src/: init.rs  main.rs  math.rs  shader.frag  shader.vert
src/bencube/: bencube.mtl
src/support/: camera.rs  mod.rs  object.rs
