[package]
name = "vulkano-tobj-testing"
version = "0.1.0"
authors = ["Whizzywig <whizzywig.rockley@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.16.1"
image = "0.20.0"
imagesize = "0.6.0"
winit = "0.17"
time = "0.1.38"
vulkano = "0.10.0"
vulkano-win = "0.10.0"
vulkano-shader-derive = "0.10.0"
tobj = "0.1.6"