[package]
name = "Rust_Game_engine"
version = "0.1.1"
authors = ["Whizzywig <whizzywig.rockley@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.16.1"
image = "0.20.0"
imagesize = "0.6.0"
winit = "0.18"
time = "0.1.38"
vulkano = "0.11"
vulkano-win = "0.11"
vulkano-shaders = "0.11.1"
tobj = "0.1.6"